# godot-mgr

./: .gitignore  README.md  godot-remote-tags.py  main.py  pyproject.toml
classes/: godot_remote_tags.py
data/: godot_remote_tags.txt
docs/: todo.txt
engine/: main.py
engine/classes/: godot_remote_tags.py
engine/functions/: downloads.py  tags.py
engine/tests/: test_base_filesystem.py  test_main.py
functions/: download_godot.py  tags.py
gui/: main.py
src/: main.py
src/classes/: cli_input.py  godot_remote_tags.py
src/data/: godot_downloaded_versions.txt  godot_remote_tags.txt
src/filesystem/: base_filesystem.py
src/functions/: delete.py  downloads.py  tags.py
src/tests/: test_dowloads.py  test_main.py
