[project]
name = "godot-mgr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.34.2",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "typer>=0.16.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
